--- a/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
+++ b/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
@@ -4,16 +4,23 @@
         <div class="card mb-3 px-2" style=" position: relative;">
             <div class="card-body">
                 <p class="subheading">Policy product details</p>
-                <form>
+                <form [formGroup]="policyProductForm">
                     <!-- ROW 1 -->
                     <div class="row mb-4">
                         <div class="mb-1 col-sm-4 col-12">
                             <label for="client" class="required product-label" id="client">Client</label>
-                            <select class="form-select form-control-sm mb-1 ms-n4" id="product-input"
-                                formControlName="source">
+                            <!-- <select class="form-select form-control-sm mb-1 ms-n4" id="product-input" formControlName="source" data-bs-toggle="modal" data-bs-target="#clientModal">
                                 <option value=""></option>
+                            </select> -->
+                            <input type="text" id="quote-input" class="form-control form-control-sm mb-1"
+                                formControlName="client_code" [value]="clientCode " [(ngModel)]="clientName"
+                                data-bs-toggle="modal" data-bs-target="#clientModal" readonly>
 
-                            </select>
+                            <!-- Display error message under the field -->
+                            <div *ngIf="policyProductForm.get('client_code').hasError('required') && policyProductForm.get('client_code').touched"
+                                class="form-text text-danger">
+                                Client is required.
+                            </div>
                         </div>
                         <div class=" mb-1 col-sm-4 col-12">
                             <label for="joint_account" class=" product-label" id="joint_account">Joint account</label>
@@ -60,7 +67,7 @@
                             </select>
                         </div>
                     </div>
-                    
+
                     <div class="collapse" id="collapseExample">
                         <!-- ROW 3 -->
                         <div class="row mb-4">
@@ -99,67 +106,136 @@
 
                                 </select>
                             </div>
-                            <div class=" mb-1 col-sm-4 col-12" >
+                            <div class=" mb-1 col-sm-4 col-12">
                                 <div class="form-check pt-4">
                                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                                     <label class="form-check-label" for="flexCheckDefault">
                                         Cashback applicable
                                     </label>
-                                  </div>
+                                </div>
                             </div>
-                            <div class="  mb-1 col-sm-4 col-12" >
+                            <div class="  mb-1 col-sm-4 col-12">
                                 <div class="form-check  pt-4">
                                     <input class="form-check-input" type="checkbox" value="" id="scheme">
                                     <label class="form-check-label" for="scheme">
                                         Scheme policy
                                     </label>
-                                  </div>
+                                </div>
                             </div>
-                           
+
                         </div>
                         <!-- ROW 5 -->
                         <div class="row mb-4">
-                            <div class=" mb-1 col-sm-4 col-12" >
+                            <div class=" mb-1 col-sm-4 col-12">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" value="" id="policy_level_debit">
                                     <label class="form-check-label" for="policy_level_debit">
                                         Policy level debit
                                     </label>
-                                  </div>
+                                </div>
                             </div>
-                            <div class=" mb-1 col-sm-4 col-12" >
+                            <div class=" mb-1 col-sm-4 col-12">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" value="" id="open_policy">
                                     <label class="form-check-label" for="open_policy">
                                         Open policy
                                     </label>
-                                  </div>
+                                </div>
                             </div>
-                            <div class=" mb-1 col-sm-4 col-12" >
+                            <div class=" mb-1 col-sm-4 col-12">
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" value="" id="coinsuarnce_policy">
                                     <label class="form-check-label" for="coinsuarnce_policy">
                                         Coinsurance policy
                                     </label>
-                                  </div>
+                                </div>
                             </div>
-                           
+
                         </div>
-                        
+
                     </div>
-                    <p class="more " (click)="show=!show" data-bs-toggle="collapse"
-                        data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">More
+                    <p class="more " (click)="show=!show" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                        aria-expanded="false" aria-controls="collapseExample">More
                         Details <span class="ml-1" data-toggle="collapse" data-target="#collapseExample"
                             aria-expanded="false" aria-controls="collapseExample"> <i class="pi pi-angle-double-up"
                                 style="font-size:13px" *ngIf="!show" data-toggle="collapse"
                                 data-target="#collapseExample"></i><i class="pi pi-angle-double-down"
                                 style="font-size:13px" *ngIf="show" data-toggle="collapse"
                                 data-target="#collapseExample"></i></span> </p>
+                    <!-- Client Modal -->
+                    <div class="modal fade" id="clientModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
 
+                                <div class="modal-body">
+                                    <button type="button" #closebutton class="float-end btn-close"
+                                        data-bs-dismiss="modal" aria-label="Close"></button>
+                                    <p class="text-start" id="selectClient">Select Client</p>
+
+                                    <p-table #dt1 [value]="clientData" [tableStyle]="{'max-width': '465px'}"
+                                        selectionMode="single" [resizableColumns]="true" styleClass="p-datatable-sm"
+                                        responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true"
+                                        [paginator]="true" [rows]="5" [scrollable]="true" scrollDirection="horizontal"
+                                        [showCurrentPageReport]="true"
+                                        currentPageReportTemplate=" {first} - {last} of {totalRecords}"
+                                        [globalFilterFields]="['idNumber', 'emailAddress','lastName','emailAddress']">
+                                        <ng-template pTemplate="caption">
+                                            <div class="flex">
+                                                <span class="p-input-icon-left ml-auto">
+                                                    <i class="pi pi-search search-icon"></i>
+                                                </span>
+                                                    <input class="search-input" pInputText type="text"
+                                                        (input)="applyFilterGlobal($event, 'contains')"
+                                                        placeholder="Search" />
+                                               
+                                            </div>
+                                        </ng-template>
+                                        <ng-template pTemplate="header">
+
+                                            <tr id="product">
+                                                <th>Id no</th>
+                                                <th>Name</th>
+                                                <th>Email</th>
+
+                                            </tr>
+                                        </ng-template>
+
+                                        <ng-template let-clientData pTemplate="body">
+                                            <tr id="productData" [pSelectableRow]=""
+                                                (click)="loadClientDetails(clientData.id);">
+
+                                                <td>
+                                                    {{clientData.idNumber}}
+                                                </td>
+                                                <td>
+                                                    {{clientData.firstName+" "+clientData.lastName}}
+                                                </td>
+                                                <td>
+                                                    {{clientData.emailAddress}}
+                                                </td>
+                                            </tr>
+                                        </ng-template>
+                                        <ng-template pTemplate="paginatorleft">
+                                            <p-button type="button" styleClass="p-button-text"></p-button>
+                                        </ng-template>
+                                        <ng-template pTemplate="paginatorright">
+                                            <p-button type="button" styleClass="p-button-text"></p-button>
+                                        </ng-template>
+                                    </p-table>
+                                    <br>
+                                    <!-- <button class="btn btn-primary float-end" data-bs-dismiss="modal" (click)="saveclient()">Save Details</button> -->
+                                </div>
+
+
+
+                            </div>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
-        
+
     </div>
 
 </div>
